--- a/new_mode/templates/index.html
+++ b/new_mode/templates/index.html
@@ -4,34 +4,72 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <title>Home</title>
+
+  <!-- Bootstrap CSS CDN -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <!-- jQuery library -->
+  <!-- jQuery CDN -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <!-- Latest compiled JavaScript -->
+  <!-- Bootstrap JavaScript CDN -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <!-- Custom CSS -->
   <link rel="stylesheet" href="/static/css/main.css">
 </head>
 
 <body>
-<header class="navbar">
-<!-- Navigation Bar -->
-  <div class="container">
-    <nav class="navbar  navbar-default navbar-fixed-top">
+
+<nav class="navbar navbar-default navbar-fixed-top">
+  <!-- Navbar Container -->
+  <div class="container-fluid">
+
+    <!-- Navbar Header [contains both toggle button and navbar brand] -->
+    <div class="navbar-header">
+      <!-- Toggle Button [handles opening navbar components on mobile screens] -->
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#exampleNavComponents"
+              aria-expanded="false">
+        <i class="glyphicon glyphicon-menu-hamburger"></i>
+      </button>
+
+      <!-- Navbar Brand -->
+      <a href="#" class="navbar-brand">
+        Bootstrap Navbar
+      </a>
+    </div>
+
+    <!-- Navbar Collapse [contains navbar components] -->
+    <div class="collapse navbar-collapse" id="exampleNavComponents"> <!-- Data target -->
+
+      <!-- Navbar Menu -->
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">Home</a></li>
         <li><a href="page1">Privacy</a></li>
         <li><a href="page2">Permissions</a></li>
       </ul>
-    </nav>
+
+    </div>
   </div>
-</header>
-<div class="container"></div>
-<footer class="footer">
-  <div class="col-container col-max col-gutters flex-block-lg flex-item-center-lg">
-    <p>Created by Timmy Milligan</p>
-  </div>
-</footer>
+
+</nav>
+
+{#<header class="navbar">#}
+{#<!-- Navigation Bar -->#}
+{#  <div class="container">#}
+{#    <nav class="navbar  navbar-default navbar-fixed-top">#}
+{#      <ul class="nav navbar-nav">#}
+{#        <li class="active"><a href="#">Home</a></li>#}
+{#        <li><a href="page1">Privacy</a></li>#}
+{#        <li><a href="page2">Permissions</a></li>#}
+{#      </ul>#}
+{#    </nav>#}
+{#  </div>#}
+{#</header>#}
+{#<div class="container"></div>#}
+{#<footer class="footer">#}
+{#  <div class="col-container col-max col-gutters flex-block-lg flex-item-center-lg">#}
+{#    <p>Created by Timmy Milligan</p>#}
+{#  </div>#}
+{#</footer>#}
 </body>
 </html>
 
