--- a/new_mode/templates/index.html
+++ b/new_mode/templates/index.html
@@ -10,7 +10,6 @@
   <!-- Bootstrap CSS CDN -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <!-- Custom CSS -->
-  {#  <link rel="stylesheet" href="/static/css/style.css">#}
   <link rel="stylesheet" href="/static/css/main.css">
 </head>
 
@@ -46,8 +45,11 @@
       </ul>
 
     </div>
+    <!-- End Navbar Collapse -->
   </div>
+  <!-- End Navbar Container-->
 </nav>
+<!-- End Navigation -->
 
 <div class="content">
 
