--- a/new_mode/templates/index.html
+++ b/new_mode/templates/index.html
@@ -98,11 +98,9 @@
 <footer class="footer">
   <div class="container">
     <p>Created by Timmy Milligan</p>
+    <p>Built with Bootstrap 3 & Python Flask</p>
   </div>
 </footer>
-{#  <div class="col-container col-max col-gutters flex-block-lg flex-item-center-lg">#}
-{#    <p>Created by Timmy Milligan</p>#}
-{#  </div>#}
 
 <!-- Placed at the end of the document so the pages load faster -->
 
@@ -127,27 +125,3 @@
 
 </body>
 </html>
-
-{#<header class="navbar">#}
-{#<!-- Navigation Bar -->#}
-{#  <div class="container">#}
-{#    <nav class="navbar  navbar-default navbar-fixed-top">#}
-{#      <ul class="nav navbar-nav">#}
-{#        <li class="active"><a href="#">Home</a></li>#}
-{#        <li><a href="page1">Privacy</a></li>#}
-{#        <li><a href="page2">Permissions</a></li>#}
-{#      </ul>#}
-{#    </nav>#}
-{#  </div>#}
-{#</header>#}
-{#<div class="container"></div>#}
-
-{#<nav class="navbar navbar-default navbar-fixed-top">#}
-{#  <div class="container">#}
-{#    <ul class="nav navbar-nav">#}
-{#      <li class="active"><a href="#">Home</a></li>#}
-{#      <li><a href="page1">Privacy</a></li>#}
-{#      <li><a href="page2">Permissions</a></li>#}
-{#    </ul>#}
-{#  </div>#}
-{#</nav>#}
