--- a/new_mode/templates/page1.html
+++ b/new_mode/templates/page1.html
@@ -40,7 +40,15 @@
       <!-- Navbar Menu -->
       <ul class="nav navbar-nav">
         <li><a href="/">Home</a></li>
-        <li class="active"><a href="#">Privacy</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+             aria-expanded="false">Privacy <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Big Data</a></li>
+            <li><a href="#">Data Brokering</a></li>
+            <li><a href="#">Data Over-Collection</a></li>
+          </ul>
+{#        <li class="active"><a href="#">Privacy</a></li>#}
         <li><a href="page2">Permissions</a></li>
       </ul>
 
