--- a/new_mode/static/css/main.css
+++ b/new_mode/static/css/main.css
@@ -1,11 +1,18 @@
 /* Navigation Bar
----------------------------------------------------------------------------------------*/
+------------------*/
+
+/* Remove the navbar's default margin-bottom and rounded borders */
+.navbar {
+  margin-bottom: 0;
+  border-radius: 0;
+}
+
 .navbar-default {
-  padding-top: 25px;
+  padding-top: 15px;
   padding-bottom: 25px;
   font-family: 'Consolas', 'Deja Vu Sans Mono', 'Bitstream Vera Sans Mono', monospace;
   color: #20c20e;
-  background: #110f2a;
+  background-color: #110f2a;
   transition: all 0.3s;
 }
 
@@ -14,7 +21,8 @@
 .navbar-default .navbar-nav > .active > a:hover,
 .navbar-default .navbar-nav > .active > a:focus {
   color: #00ff00;
-  background-color: #121a44;
+  background-color: #110f2a;
+  /*background-color: #121a44;*/
 }
 
 /*All Other Pages*/
@@ -33,6 +41,8 @@
 
 /*Overrides the initial style when the page is scrolled*/
 .navbar.compressed {
+  position: fixed;
+  top: 0;
   padding-top: 10px;
   padding-bottom: 10px;
   color: #20c20e;
@@ -50,24 +60,41 @@ body {
   /*background-color: #252d42;*/
 }
 
-p {
+/*#top {*/
+/*margin: 30px 0;*/
+/*line-height: 1.8em;*/
+/*font-size: 1.2em;*/
+/*font-weight: 300;*/
+/*color: #20c20e;*/
+/*}*/
+
+/* Home Page Paragraphs */
+p.intro-1,
+p.intro-2 {
   margin: 30px 0;
   line-height: 1.8em;
   font-size: 1.2em;
   font-weight: 300;
-  color: #20c20e;
+  color: aliceblue;
 }
 
-.content {
-  padding: 50px 0;
-}
-
-.line {
-  width: 100%;
-  height: 1px;
+ul.intro-2 {
   margin: 30px 0;
-  border-bottom: 1px dashed #252d42;
+  line-height: 1.8em;
+  font-size: 1.2em;
+  font-weight: 300;
 }
+
+/*.content {*/
+/*padding: 50px 0;*/
+/*}*/
+
+/*.line {*/
+/*width: 100%;*/
+/*height: 1px;*/
+/*margin: 30px 0;*/
+/*border-bottom: 1px dashed #252d42;*/
+/*}*/
 
 /* Sticky footer
 ----------------------------------------------------------------------------*/
@@ -80,7 +107,7 @@ html {
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 60px; /* Fixed height of footer */
+  height: 70px; /* Fixed height of footer */
   font-family: 'Consolas', 'Monaco', 'Bitstream Vera Sans Mono', monospace;
   color: #00ff00;
   background-color: #110f2a;
@@ -91,9 +118,22 @@ html {
 }
 
 /* Overrides margin so footer sits at bottom */
-.footer .container > p { margin: 0; }
+.footer .container > p,
+.footer .container > li {
+  margin: 0;
+}
 
 .footer > .container {
   padding-right: 15px;
   padding-left: 15px;
+}
+
+/* On small screens, set height to 'auto' for sidenav and grid */
+@media screen and (max-width: 767px) {
+  .sidenav {
+    height: auto;
+    padding: 15px;
+  }
+  
+  .row.content {height: auto;}
 }
